# pinecone-datasets

./: .gitignore  LICENSE  MAINTAINERS.md  README.md  mypy.ini  pyproject.toml  scratchpad.ipynb  test_download_progress.py
.github/workflows/: PR.yml  cd.yml  ci.yml  docs.yml
config/: config.toml
data/: catalog.json
data/two_docs-edo-edo/documents/: two_docs.parquet
datasets/: __init__.py  catalog.py  cfg.py  dataset.py
pinecone_datasets/: __init__.py  cache.py  catalog.py  cfg.py  dataset.py  dataset_fsreader.py  dataset_fswriter.py  dataset_metadata.py  ds_utils.py  fs.py  index_writer.py  public.py  retry.py  testing.py  tqdm.py  utils.py
tests/: __init__.py  cleanup.py  test_basics.py  test_catalog.py  test_datasets.py  test_ds_utils.py  test_fs.py  test_io_cloud_storage.py  test_io_local.py  test_io_pinecone.py  test_private_datasets.py  test_public_datasets.py  test_schema_validation.py  test_utils.py
tests/dataset_validation/: README.md  test_validate_public_datasets.py
tests/integration/: conftest.py  test_cache_integration.py  test_error_scenarios.py  test_io_cloud_storage_s3.py  test_io_local.py  test_io_private_cloud_storage_gcs.py  test_list_datasets.py  test_load_dataset.py
tests/system/: test_io_pinecone.py  test_private_datasets.py
tests/unit/: test_basics.py  test_cache.py  test_catalog.py  test_catalog_errors.py  test_dataset_metadata.py  test_fs.py  test_fs_errors.py  test_fsreader_errors.py  test_fswriter_errors.py  test_io_cloud_storage.py  test_io_local.py  test_parallel_downloads.py  test_private_datasets.py  test_retry.py  test_schema_validation.py  test_sentence_transformers.py  test_utils.py
tests/utils/: test_public_datasets.py
