[tool.poetry]
name = "pinecone-datasets"
version = "1.0.0.dev2"
description = "Pinecone Datasets lets you easily load datasets into your Pinecone index."
authors = ["Pinecone Support <support@pinecone.io>"]
maintainers = [
    "Amnon Catav <amnon@pinecone.io>",
    "Roy Miara <miararoy@gmail.com>",
    "Jen Hamon <jhamon@pinecone.io>",
]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fsspec = "^2025.2.0"
gcsfs = "^2025.2.0"
s3fs = "^2025.2.0"
pydantic = "^2.0.0"
pandas = "^2.0.0"
tqdm = "^4.65.0"
pinecone = "^6.0.1"
pyarrow = "^18.0.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
black = "^23.1.0"
pytest-cov = "^4.0.0"
mypy = "^1.0.1"
pytest = "^7.2.2"
pytest-html = "^3.2.0"
pdoc = "^13.0.0"
toml = "^0.10.2"
pytest-xdist = "^3.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
